src/objects/UserExtension__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting to maintain Extension, Personal Caller Id, Extension Cell Phone etc.,</description>
    <fields>
        <fullName>AlternateCallerIdPrefix__c</fullName>
        <description>Comma-separated values for the user to alternate caller id&apos;s for ex., CellPhone, HomePhone. Prior to adding the value Armen needs to add these caller id on Free pbx</description>
        <inlineHelpText>Comma separated values for Caller Id ex., *2137,*7573</inlineHelpText>
        <label>User Alternate CallerId Prefix(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultCallerIdPrefix__c</fullName>
        <description>User default caller Id prefix is the Desk phone&apos;s CallerId prefix</description>
        <inlineHelpText>Desk phone&apos;s CallerId prefix</inlineHelpText>
        <label>User Default CallerId Prefix</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultCallerId__c</fullName>
        <description>User default caller Id is the Desk phone&apos;s CallerId</description>
        <inlineHelpText>Desk phone caller Id</inlineHelpText>
        <label>User Default CallerId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtensionMobilePhone__c</fullName>
        <description>Cell phone number for Click to Dial</description>
        <inlineHelpText>Cell Phone for Click to Dial</inlineHelpText>
        <label>Extension Mobile Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Desk phone number to receive call on Click to Dial</description>
        <inlineHelpText>Desk Phone for Click To Dial</inlineHelpText>
        <label>Extension</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMakeCallOnMobPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value to call on Cell Phone or Desk phone when user select Click to Dial
IsTrue -&gt; User will receive call on his Cell Phone
IsFalse -&gt; User will receive call on his Desk phone</description>
        <inlineHelpText>Checked to receive calls on Cell Phone when ClickToDial (Automatically populated)</inlineHelpText>
        <label>C2C on cell ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectedCallerIdPrefix__c</fullName>
        <inlineHelpText>Selected caller id prefix from VF page (Automatically populated)</inlineHelpText>
        <label>User Selected CallerId Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedCallerId__c</fullName>
        <description>Field for selected caller id from the VF page</description>
        <inlineHelpText>Selected caller id from VF page (Automatically populated)</inlineHelpText>
        <label>User Selected CallerId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Click to Dial UserExtensions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>IsMakeCallOnMobPhone__c</columns>
        <columns>ExtensionMobilePhone__c</columns>
        <columns>Extension__c</columns>
        <columns>DefaultCallerIdPrefix__c</columns>
        <columns>DefaultCallerId__c</columns>
        <columns>AlternateCallerIdPrefix__c</columns>
        <columns>SelectedCallerIdPrefix__c</columns>
        <columns>SelectedCallerId__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>